2008-02-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix a memory leak.

2008-02-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.91.

2008-02-14  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Check for nautilus_burn_drive_can_eject.

	* src/sj-main.c:
	Use nautilus_burn_drive_can_eject to enable/disable the Eject button.

	Thanks Dave Meikle (#430787).

2008-02-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	When extracting write to a temporary file and rename it when
	finished, so that cancelling when overwriting doesn't remove the
	previously ripped track (#172543, thanks Matthew Martin).

2008-02-09  Claude Paroz  <claude@2xlibre.net>

	* src/sj-about.c: (on_about_activate): Updated FSF address.

2008-01-31  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.3.

2008-01-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Change the templates for "disc number".

2008-01-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Set a11y relations on the not-musicbrainz banner so that screen
	readers see it. (#511709, thanks Rich Burridge and Willie Walker
	for the help).

2008-01-24  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix play/pause (thanks Bill O'Shea).

2008-01-23  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Set the disc number so it can be seen in the preview.

2008-01-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add a missing break, fixing the file pattern generation.

2008-01-23  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	When stopping check for valid ranges, to avoid warnings.

2008-01-23  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Check that the release date is not NULL before checking that it is
	valid.

2008-01-23  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Fix use-after-free I introduced when cleaning up the disc
	detection logic.
