@@ -1,3 +1,9 @@
+2008-02-21  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	When editing the album artist, if there is a sortable artist name
+	set then unset it (#397416).
+
 2008-02-20  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
